--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,5 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"> </script>
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 <script>
 MathJax = {
